@@ -171,7 +171,7 @@ extern void zxvision_print_string(zxvision_window *w,int x,int y,int tinta,int p
 extern void zxvision_print_string_defaults(zxvision_window *w,int x,int y,char *texto);
 extern void zxvision_print_string_defaults_fillspc(zxvision_window *w,int x,int y,char *texto);
 extern void zxvision_handle_mouse_events(zxvision_window *w);
-extern void zxvision_generic_message_tooltip(char *titulo, int volver_timeout, int tooltip_enabled, int mostrar_cursor, generic_message_tooltip_return *retorno, int resizable, const char * texto_format , ...);
+extern void zxvision_generic_message_tooltip(char *titulo, int return_after_print_text, int volver_timeout, int tooltip_enabled, int mostrar_cursor, generic_message_tooltip_return *retorno, int resizable, const char * texto_format , ...);
 
 extern void zxvision_send_scroll_up(zxvision_window *w);
 extern void zxvision_send_scroll_down(zxvision_window *w);
