@@ -5,6 +5,7 @@ Improved menu environment:
 * Added new menu window type: ZX Vision. GUI Windows can be moved, resized, scrolled, minimized, closed, and change the focus to the background
 * Windows can be scrolled using mouse wheel
 * Warning and Error window messages now show an animation
+* Added first-aid help windows
 
 Added Z80 assembler
 Added setting to specify configuration file
